<resources>
    <string name="app_name">JntuH R13 Syllabus Book</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="r13_syllabus">R13 SYLLABUS</string>
    <string name="about">ABOUT</string>
    <string name="About"> &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;ABOUT</string>
    <string name="contact_us">CONTACT US</string>
    <string name="Contact_us"> &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;CONTACT US</string>
    <string name="about_text">        In B.Tech life at JNTU, Syllabus Book plays a major role in a students life. It consists all the academic details of their syllabus along with the Textbooks and Reference books for a particular subject. But, carrying the syllabus book wherever we go is not possible.\n \n What if we need our Syllabus on the go?\n \n How if we forget the author or publications of the books when we want to buy at the retailer?\n

         \nIn that situation this project is very helpful for the R13 regulation Students. In this project, just by accessing the app in your smart phone, u can know all your details of the Syllabus related to R13 regulation of JNTU-Hyderabad affiliated Colleges.</string>
    <string name="contact_text">If u have any suggestions, feedback or if you have found any mistakes in syllabus kindly contact us at @gmail.com
    \n\n\n\n                   &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Developed By \n\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; Gnaneswar\n\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; Maharshi\n\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; Kiran</string>
    <string name="title_activity_years">Years</string>
    <string name="cse">CSE</string>
    <string name="ece">ECE</string>
    <string name="title_activity_year1_subjects">Year1_subjects</string>
    <string name="title_activity_mathematics_1">Mathematics_1</string>
    <string name="title_activity_english">English</string>
    <string name="title_activity_mathematics__methods">Mathematics_Methods</string>
    <string name="title_activity_engineering">Engineering</string>
    <string name="title_activity_engineering__physics">Engineering_Physics</string>
    <string name="title_activity_engineering__chemistry">Engineering_Chemistry</string>
    <string name="title_activity_computer_programming">Computer_programming</string>
    <string name="title_activity_engineering_drawing">Engineering_drawing</string>
    <string name="title_activity_computer_programming_lab">Computer_programming_lab</string>
    <string name="title_activity_physics_and">Physics_and</string>
    <string name="title_activity_physics_chemistry_lab">Physics_chemistry_lab</string>
    <string name="title_activity_elcs_lab">ELCS_lab</string>
    <string name="title_activity_workshop_it_lab">Workshop_it_lab</string>
    <string name="title_activity_branches_1st_year">Branches_1st_year</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_branches_2_1">Branches_2_1</string>
    <string name="title_activity_branches_2_2">Branches_2_2</string>
    <string name="title_activity_mathematics_3">Mathematics_3</string>
    <string name="title_activity_probability_shotastic_process">Probability_stochastic_process</string>
    <string name="title_activity_environmental_science">Environmental_science</string>
    <string name="title_activity_electric_circuits">Electric_circuits</string>
    <string name="title_activity_signals_and_systems">Signals_and_systems</string>
    <string name="title_activity_edc">EDC</string>
    <string name="title_activity_bs_lab">BS_lab</string>
    <string name="title_activity_edc_lab">EDC_lab</string>
    <string name="title_activity_cse_2_1">Cse_2_1</string>
    <string name="title_activity_probability_statistics">Probability_statistics</string>
    <string name="title_activity_probability_and_statistics">Probability_and_statistics</string>
    <string name="title_activity_mfcs">MFCS</string>
    <string name="title_activity_data_structures">Data_structures</string>
    <string name="title_activity_dld">DLD</string>
    <string name="title_activity_bee">BEE</string>
    <string name="title_activity_data_structures_lab">Data_structures_lab</string>
    <string name="title_activity_cse_2_2">CSE_2_2</string>
    <string name="title_activity_dept_cse_2_1">Dept_cse_2_1</string>
    <string name="title_activity_dept_ece_2_1">Dept_ece_2_1</string>
    <string name="title_activity_under_construction">Under_construction</string>
    <string name="title_activity_english2">English2</string>
    <string name="title_activity_english3">English3</string>
    <string name="title_activity_stld">STLD</string>
    <string name="title_activity_branches2_1">Branches2_1</string>
    <string name="year1">1</string>
    <string name="year2_1">2-1</string>
    <string name="year2_2">2-2</string>
    <string name="year3_1">3-1</string>
    <string name="year3_2">3-2</string>
    <string name="year4_1">4-1</string>
    <string name="year4_2">4-2</string>
    <string name="english">ENGLISH</string>
    <string name="mathematics_i">MATHEMATICS-I</string>
    <string name="mathematical_methods">MATHEMATICAL METHODS</string>
    <string name="engineering_phy">ENGINEERING PHYSICS</string>
    <string name="engineering_chem">ENGINEERING CHEMISTRY</string>
    <string name="computer_program">COMPUTER PROGRAMMING</string>
    <string name="eng_draw">ENGINEERING DRAWING</string>
    <string name="cp_lab">COMPUTER PROGRAMMING LAB</string>
    <string name="eng_phy_chem_lab">ENGINEERING PHYSICS AND ENGINEERING CHEMISTRY</string>
    <string name="elcs_lab">ENGLISH LANGUAGE COMMUNICATION SKILLS LAB</string>
    <string name="eng_ws_it">ENGINEERING/IT WORKSHOP</string>
    <string name="English">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;ENGLISH</string>
</resources>