<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Year1_subjects" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >



            <Button
                android:id="@+id/button1"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="dosomething1"
                android:text="@string/english"
                android:textColor="#ffffff"
                android:layout_marginTop="4dp"/>

            <Button
                android:id="@+id/button2"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="dosomething2"
                android:text="@string/mathematics_i"
                android:textColor="#ffffff"
                android:layout_marginTop="4dp"/>

            <Button
                android:id="@+id/button3"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="dosomething3"
                android:text="@string/mathematical_methods"
                android:textColor="#ffffff"
                android:layout_marginTop="4dp"/>

            <Button
                android:id="@+id/button4"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="dosomething4"
                android:text="@string/engineering_phy"
                android:textColor="#ffffff"
                android:layout_marginTop="4dp"/>

            <Button
                android:id="@+id/button5"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="dosomething5"
                android:text="@string/engineering_chem"
                android:textColor="#ffffff"
                android:layout_marginTop="4dp"/>

            <Button
                android:id="@+id/button6"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="dosomething6"
                android:text="@string/computer_program"
                android:textColor="#ffffff"
                android:layout_marginTop="4dp"/>

            <Button
                android:id="@+id/button7"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="dosomething7"
                android:text="@string/eng_draw"
                android:textColor="#ffffff"
                android:layout_marginTop="4dp"/>

            <Button
                android:id="@+id/button8"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="dosomething8"
                android:text="@string/cp_lab"
                android:textColor="#ffffff"
                android:layout_marginTop="4dp"/>

            <Button
                android:id="@+id/button9"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="dosomething9"
                android:text="@string/eng_phy_chem_lab"
                android:textColor="#ffffff"
                android:layout_marginTop="4dp"/>

            <Button
                android:id="@+id/button10"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="dosomething10"
                android:text="@string/elcs_lab"
                android:textColor="#ffffff"
                android:layout_marginTop="4dp"/>

            <Button
                android:id="@+id/button11"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="dosomething11"
                android:text="@string/eng_ws_it"
                android:textColor="#ffffff"
                android:layout_marginTop="4dp"/>
        
        </LinearLayout>
    </ScrollView>
    
</RelativeLayout>
