<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="Years" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignParentTop="true"
        android:text="Select your year/sem:"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff" />


    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:onClick="dosomething1"
        android:text="@string/year1"
        android:layout_marginTop="20dp"
        android:textColor="#ffffff" />


    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button3"
        android:layout_alignLeft="@+id/button1"
        android:onClick="dosomething2"
        android:text="@string/year2_1"
        android:layout_marginTop="10dp"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button4"
        android:layout_alignLeft="@+id/button2"
        android:onClick="dosomething3"
        android:text="@string/year2_2"
        android:layout_marginTop="10dp"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button5"
        android:layout_alignLeft="@+id/button3"
        android:layout_centerVertical="true"
        android:onClick="dosomething4"
        android:text="@string/year3_1"
        android:layout_marginTop="10dp"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button6"
        android:layout_alignLeft="@+id/button4"
        android:onClick="dosomething5"
        android:text="@string/year3_2"
        android:layout_marginTop="10dp"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button7"
        android:layout_alignLeft="@+id/button5"
        android:text="@string/year4_1"
        android:onClick="dosomething6"
        android:layout_marginTop="10dp"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/button7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignParentBottom="true"
        android:onClick="dosomething7"
        android:text="@string/year4_2"
        android:layout_marginTop="10dp"
        android:textColor="#ffffff" />

</RelativeLayout>
